src/objects/Custom_Object_A__c.object
<CustomObject>
    <fields>
        <fullName>Custom_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Custom Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Custom_Email__c</fullName>
        <label>Custom Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Custom_Text_Area__c</fullName>
        <label>Custom Text Area</label>
        <type>TextArea</type>
    </fields>
    <label>Custom Object A</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Custom_Checkbox__c</columns>
        <columns>Custom_Date__c</columns>
        <columns>Custom_Email__c</columns>
        <columns>Custom_Text_Area__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CO-{000}</displayFormat>
        <label>Custom Object A Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Objects A</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>